# NHQIseg

./: .bumpversion.cfg  .gitignore  .gitlab-ci-alba.yml  .travis.yml  pyproject.toml  setup.cfg  setup.py
conda/: meta.yaml
nhq_iseg/: __init__.py  channel.py  communication.py  constant.py  controller.py  tango.py
nhq_iseg/tango/: server.py
nhqiseg/: __init__.py  channel.py  communication.py  controller.py
recipe/: meta.yaml
test/: conftest.py  patch_serial.py  test_com.py  test_controller.py
